# Cogsworth

./: .gitignore  CMakeLists.txt  Cogsworth.asm  README.md  rsrc.rc
DirectCogsworth/: DirectCogsworth.aps  DirectCogsworth.ncb  DirectCogsworth.rc  DirectCogsworth.sln  DirectCogsworth.vcproj  d3d.cpp  main.cpp  resource.h  stdafx.h
data/: Hour Hand.psd  Minute Hand.psd
src/: CMakeLists.txt  Cogsworth.asm  assets.h  assets.rc
src/cpp-blueprint/: CMakeLists.txt  assets.rc  main.cpp  scene.cpp  scene.h
